# RunningStats

./: .gitignore  CMakeLists.txt  README.md  plot-image.cpp  randutils.hpp  runningstats-autohist.cpp  runningstats-get-median.cpp  runningstats-print.cpp  runningstats-thresholds.cpp
cmake/: LibraryConfig.cmake  SetEnv.cmake
runningstats/: binarystats.cpp  colormaps.cpp  covariance.cpp  histconfig.cpp  histogram.cpp  histogram2d.cpp  image.cpp  mfh.cpp  misc.cpp  misc.h  quantilestats.cpp  rs.cpp  running-max.cpp  runningstats.cpp  runningstats.h  stats2d.cpp  statsvec.cpp
runningstats/colormaps/: blue_red_lab_ceres.inc  blue_red_lab_ceres2.inc  blue_red_lab_ceres_clipped.inc  viridis-clipped.inc  viridis.inc
test/: CMakeLists.txt  subtest_precision.cpp  subtest_quantilestats.cpp  subtest_threshold_error_mean.cpp  subtest_weighted_runningstats.cpp  subtestcopyassign.cpp  subtestimage.cpp  subtestimage2d.cpp  subteststatsnd.cpp  test-2d.cpp  test-knuth.cpp  test-runningstats.cpp
